--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
-    "spellcheck": "pyspelling -c .spellcheck.yml"
+    "spellcheck": "pyspelling -c .spellcheck.yml",
+    "sort": "sort -f -o .wordlist.txt .wordlist.txt"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.56",
