--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "format": "yarn prettier --write ."
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.56",
-    "@docusaurus/plugin-google-analytics": "^2.0.0-alpha.37",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.56",
+    "@docusaurus/core": "^2.0.0-alpha.60",
+    "@docusaurus/plugin-google-analytics": "^2.0.0-alpha.60",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.60",
     "classnames": "^2.2.6",
+    "elliptic": "^6.5.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   },
